--- a/src/main/resources/scene.fxml
+++ b/src/main/resources/scene.fxml
@@ -4,8 +4,9 @@
 <?import javafx.scene.layout.StackPane?>
 
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLController">
+<?import javafx.scene.control.Button?>
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.computer.shop.controllers.FXMLController">
    <children>
-      <Label fx:id="label" text="Label" />
+      <Button fx:id="buttonPrintToConsole" text="Print to console" onAction="#printToConsoleClick"/>
    </children>
 </StackPane>
