--- a/src/main/resources/menu/menu.fxml
+++ b/src/main/resources/menu/menu.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menus.Mainmenu">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.computer.shop.controllers.MenuController">
    <children>
       <Label layoutX="286.0" layoutY="32.0" text="Welcome!" />
       <Label layoutX="226.0" layoutY="66.0" text="To the computer shop aplication" />
