--- a/src/main/resources/register/register.fxml
+++ b/src/main/resources/register/register.fxml
@@ -6,15 +6,15 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.computer.shop.controllers.RegisterController">
    <children>
       <Label layoutX="255.0" layoutY="43.0" text="Registration field" />
-      <TextField layoutX="226.0" layoutY="129.0" />
-      <TextField layoutX="226.0" layoutY="175.0" />
-      <TextField layoutX="226.0" layoutY="259.0" />
+      <Label layoutX="165.0" layoutY="133.0" text="Login ID:" />
       <Label layoutX="173.0" layoutY="263.0" text="Email:" />
       <Label layoutX="158.0" layoutY="179.0" text="Password:" />
-      <Label layoutX="165.0" layoutY="133.0" text="Login ID:" />
-      <Button layoutX="256.0" layoutY="312.0" mnemonicParsing="false" text="Register now!" />
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" onAction="#backToMenu"/>
-      <Label layoutX="117.0" layoutY="224.0" text="Reapet password:" />
-      <TextField layoutX="226.0" layoutY="220.0" />
+      <Label layoutX="117.0" layoutY="224.0" text="Repeat password:" />
+      <Button layoutX="256.0" layoutY="312.0" mnemonicParsing="false" onAction="#register" text="Register now!" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToMenu" text="Back" />
+      <TextField fx:id="loginInput" layoutX="226.0" layoutY="129.0" />
+      <TextField fx:id="passwordInput" layoutX="226.0" layoutY="175.0" />
+      <TextField fx:id="passwordInput2" layoutX="226.0" layoutY="220.0" />
+      <TextField fx:id="emailInput" layoutX="226.0" layoutY="259.0" />
    </children>
 </AnchorPane>
