--- a/src/main/resources/menu/menu.fxml
+++ b/src/main/resources/menu/menu.fxml
@@ -7,7 +7,7 @@
    <children>
       <Label layoutX="286.0" layoutY="32.0" text="Welcome!" />
       <Label layoutX="226.0" layoutY="66.0" text="To the computer shop aplication" />
-      <Button layoutX="63.0" layoutY="114.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Preview the offered shop items" />
+      <Button layoutX="63.0" layoutY="114.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Preview the offered shop items" onAction="#loadShopItems"/>
       <Button layoutX="354.0" layoutY="114.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Add new items to the shop" />
       <Button layoutX="63.0" layoutY="234.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Order an item" />
       <Button layoutX="354.0" layoutY="234.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Contacts" />
