--- a/src/main/resources/login/login.fxml
+++ b/src/main/resources/login/login.fxml
@@ -8,12 +8,12 @@
       <Pane prefHeight="200.0" prefWidth="200.0">
          <children>
             <Label layoutX="230.0" layoutY="95.0" prefHeight="47.0" prefWidth="141.0" text="Login into computer shop!" />
-            <TextField layoutX="226.0" layoutY="181.0" fx:id="loginTextField"/>
-            <TextField layoutX="226.0" layoutY="218.0" fx:id="passwordTextField"/>
+            <TextField fx:id="loginTextField" layoutX="226.0" layoutY="181.0" />
+            <TextField fx:id="passwordTextField" layoutX="226.0" layoutY="218.0" />
             <Label layoutX="150.0" layoutY="181.0" prefHeight="25.0" prefWidth="53.0" text="Login ID" />
             <Label layoutX="143.0" layoutY="218.0" prefHeight="25.0" prefWidth="60.0" text="Password" />
-            <Button layoutX="482.0" layoutY="29.0" mnemonicParsing="false" text="Register here!" onAction="#openRegisterView"/>
-            <Button layoutX="263.0" layoutY="260.0" mnemonicParsing="false" text="Login now!" onAction="#login"/>
+            <Button layoutX="482.0" layoutY="29.0" mnemonicParsing="false" onAction="#openRegisterView" text="Register here!" />
+            <Button id="login" layoutX="263.0" layoutY="272.0" mnemonicParsing="false" onAction="#login" prefHeight="10.0" prefWidth="75.0" text="Login now!" />
          </children></Pane>
    </children>
 </StackPane>
