--- a/src/main/resources/orderMenu/ordermenu.fxml
+++ b/src/main/resources/orderMenu/ordermenu.fxml
@@ -16,6 +16,6 @@
       <TextField layoutX="261.0" layoutY="258.0" />
       <Label layoutX="223.0" layoutY="69.0" prefHeight="50.0" prefWidth="170.0" text="*Please enter the information of the item to order it" wrapText="true" />
       <Button layoutX="282.0" layoutY="318.0" mnemonicParsing="false" text="Order now!" />
-      <Button layoutX="241.0" layoutY="353.0" mnemonicParsing="false" text="Go back to the main menu" />
+      <Button layoutX="29.0" layoutY="29.0" mnemonicParsing="false" text="Go back to main menu" />
    </children>
 </AnchorPane>
