--- a/src/main/resources/register/register.fxml
+++ b/src/main/resources/register/register.fxml
@@ -11,7 +11,7 @@
       <Label layoutX="158.0" layoutY="179.0" text="Password:" />
       <Label layoutX="117.0" layoutY="224.0" text="Repeat password:" />
       <Button layoutX="256.0" layoutY="312.0" mnemonicParsing="false" onAction="#register" text="Register now!" />
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToMenu" text="Back" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToMenu" text="Go back to main menu" />
       <TextField fx:id="loginInput" layoutX="226.0" layoutY="129.0" />
       <TextField fx:id="passwordInput" layoutX="226.0" layoutY="175.0" />
       <TextField fx:id="passwordInput2" layoutX="226.0" layoutY="220.0" />
