--- a/src/main/resources/menu/menu.fxml
+++ b/src/main/resources/menu/menu.fxml
@@ -8,9 +8,9 @@
       <Label layoutX="286.0" layoutY="32.0" text="Welcome!" />
       <Label layoutX="226.0" layoutY="66.0" text="To the computer shop aplication" />
       <Button layoutX="63.0" layoutY="114.0" mnemonicParsing="false" onAction="#loadShopItems" prefHeight="41.0" prefWidth="182.0" text="Preview the offered shop items" />
-      <Button layoutX="354.0" layoutY="114.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Add new items to the shop" />
-      <Button layoutX="63.0" layoutY="234.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Order an item" />
-      <Button layoutX="354.0" layoutY="234.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="182.0" text="Contacts" />
-      <Button layoutX="522.0" layoutY="20.0" mnemonicParsing="false" text="Logout" />
+      <Button layoutX="354.0" layoutY="114.0" mnemonicParsing="false" onAction="#loadItemInsertion" prefHeight="41.0" prefWidth="182.0" text="Add new items to the shop" />
+      <Button layoutX="63.0" layoutY="234.0" mnemonicParsing="false" onAction="#loadOrderMenu" prefHeight="41.0" prefWidth="182.0" text="Order an item" />
+      <Button layoutX="354.0" layoutY="234.0" mnemonicParsing="false" onAction="#loadContactsMenu" prefHeight="41.0" prefWidth="182.0" text="Contacts" />
+      <Button layoutX="522.0" layoutY="20.0" mnemonicParsing="false" onAction="#backToMenu" text="Logout" />
    </children>
 </AnchorPane>
